--- a/projects/rebstockhalde.html
+++ b/projects/rebstockhalde.html
@@ -5,17 +5,15 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Bailey | Thursday</title>
-    <meta name="description" content="“We bend metal,” this family firm told us. Naturally, our first question was “Why? And why should people come to you?” It’s not always easy for a...">
+    <title>Sandstrasse | Euphorie AG</title>
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../assets/css/app30f1.css">
-    <meta name="csrf-token" content="nkzgrYLewCvdRws2WPZgQ7IgJskxKiiwGPcjZu4u">
-    <meta name="recaptcha-key" content="6LcsJ90ZAAAAAK796fkJyLP4AE4dORLStGi05n4e">
-    <meta property="og:title" content="Bailey | Thursday">
+
+    <meta property="og:title" content="Sandstrasse | Euphorie">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="villa.html">
+    <meta property="og:url" content="sandstrasse.html">
     <meta property="og:image" content="../assets/img/resized/opengraph/1623663389-logo-green.jpg">
     <link rel="apple-touch-icon" sizes="180x180" href="../apple-icon-180x180.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
@@ -27,7 +25,7 @@
 
 <body>
     <div id="js-page-transition" class="js-loader fixed top-0 bottom-0 left-0 right-0 z-50 bg-grey-200 p-6 md:p-18">
-        <h2 id="js-page-transition__title" class="type-5xl text-red">Villa Haupstrasse</h2>
+        <h2 id="js-page-transition__title" class="type-5xl text-red">Sandstrasse</h2>
     </div>
     <div id="app">
         <div class="js-cursor custom-cursor">
@@ -112,20 +110,27 @@
 
                 <h1 class="type-3xl w-full block mt-20 md:mt-48 fade-in">
                     <div data-delay="0" class="js-word-by-word inline leading-none">
-                        <div><span>Villa Hauptstrasse</span></div><br>
+                        <div><span>Rebstockhalde</span></div><br>
                     </div>
-                    <span class="text-grey-500"><div data-delay="0" class="js-word-by-word inline leading-none"><div><span>Let's</span></div>
-            <div><span>be neighbours ;).</span></div>
-
+                    <span class="text-grey-500"><div data-delay="0" class="js-word-by-word inline leading-none"><div><span>It's</span></div>
+            <div><span>like</span></div>
+            <div><span>Hotel 69.</span></div>
+            <div><span>Once</span></div>
+            <div><span>you</span></div>
+            <div><span>check</span></div>
+            <div><span>in</span></div>
+            <div><span>you'll</span></div>
+            <div><span>stay</span></div>
+            <div><span>forever.</span></div>
         </div>
         </span>
         </h1>
 
         <section class="site-section mt-16 md:mt-28 fade-in" data-delay="0.5">
             <picture>
-                <source srcset="../assets/img/projects/villa/01.jpg" media="(min-width: 1200px)">
-                <source srcset="../assets/img/projects/villa/01.jpg" media="(min-width: 640px)">
-                <img src="../assets/img/projects/villa/01.jpg" class="w-full " alt="Logo green">
+                <source srcset="../assets/img/projects/rebstockhalde/01.jpg" media="(min-width: 1200px)">
+                <source srcset="../assets/img/projects/rebstockhalde/01.jpg" media="(min-width: 640px)">
+                <img src="../assets/img/projects/rebstockhalde/01.jpg" class="w-full " alt="Logo green">
             </picture>
         </section>
 
@@ -135,56 +140,56 @@
                     <p>&nbsp;</p>
                     <p><strong>Objekt:</strong><br>
                         <span style="font-size: smaller; font-color:rgb(184, 184, 184);">
-                            Villa</span></p><br>
+                    Wohn- und Gewerbehaus</span></p><br>
 
                     <p><strong>Bauherr:</strong><br>
-                        <span style="font-size: smaller; font-color:rgb(184, 184, 184);">
+                        <span style="font-size: smaller; font-color:rgb(187, 187, 187);">
                         Euphorie AG</span></p><br>
 
 
-                    <p><strong>Standort:</strong><br> <span style="font-size: smaller; font-color:rgb(184, 184, 184);">Hauptstrasse 19<br> 5734 Reinach AG</span></p>
-                    </br>
+                    <p><strong>Standort:</strong><br> <span style="font-size: smaller; font-color:rgb(184, 184, 184);">Sandstrasse 33 und 35<br> 5712 Beinwil am See</span></p>
 
                     <p><strong>Parzelle Nummer:</strong><br>
-                        <span style="font-size: smaller; font-color:rgb(184, 184, 184);">
-                    Grundbuch Reinach AG,<br> 
-                    Parzelle 1447</span></p><br>
+                        <span style="font-size: smaller; font-color:rgb(189, 189, 189);">
+                    Grundbuch Beinwil am See,<br> 
+                    Parzelle 2114</span></p><br>
 
                     <p><strong>Grundstücksfläche:</strong><br>
-                        <span style="font-size: smaller; font-color:rgb(184, 184, 184);">
-                            1‘386 m2 (13,86 Aren)</span></p><br>
+                        <span style="font-size: smaller; font-color:rgb(189, 189, 189);">
+                  2‘666 m2 (26,66 Aren)</span></p><br>
 
                     <p><strong>Projektierung:</strong><br>
-                        <span style="font-size: smaller; font-color:rgb(184, 184, 184);">
-                2015 – 2016</span></p><br>
+                        <span style="font-size: smaller; font-color:rgb(187, 187, 187);">
+                2016 – 2017</span></p><br>
 
 
 
                 </div>
             </ul>
             <div class="max-w-3xl type-base mt-12 md:mt-0">
+
                 “We bend metal,” this family firm told us. Naturally, our first question was “Why? And why should people come to you?” It’s not always easy for a client to answer, especially if they are straight-forward, metal-bending men-of-few-words. In truth, Bailey
                 are specialists in the design and manufacture of high-quality architectural facades and roofing systems. So with encouragement, investigation and inspiration, we helped them to see what was unique about their business, and worth shouting
                 about.
             </div>
         </section>
+
         <section class="container site-section fade-in">
 
             <picture>
-                <source srcset="../assets/img/projects/villa/02.jpg" media="(min-width: 1200px)">
-                <source srcset="../assets/img/projects/villa/02.jpg" media="(min-width: 640px)">
-                <img src="../assets/img/projects/villa/02.jpg" class="w-full " alt="Logo green">
+                <source srcset="../assets/img/projects/rebstockhalde/indoors02.jpg" media="(min-width: 1200px)">
+                <source srcset="../assets/img/projects/rebstockhalde/indoors02.jpg" media="(min-width: 640px)">
+                <img src="../assets/img/projects/rebstockhalde/indoors02.jpg" class="w-full " alt="Logo green">
             </picture>
         </section>
         <section class="container site-section fade-in">
 
             <picture>
-                <source srcset="../assets/img/projects/villa/03.jpg" media="(min-width: 1200px)">
-                <source srcset="../assets/img/projects/villa/03.jpg" media="(min-width: 640px)">
-                <img src="../assets/img/projects/villa/03.jpg" class="w-full " alt="Logo green">
+                <source srcset="../assets/img/projects/rebstockhalde/indoors03.jpg" media="(min-width: 1200px)">
+                <source srcset="../assets/img/projects/rebstockhalde/indoors03.jpg" media="(min-width: 640px)">
+                <img src="../assets/img/projects/rebstockhalde/indoors03.jpg" class="w-full " alt="Logo green">
             </picture>
         </section>
-
         <section class="container-3xl--right site-section--narrow cms-copy fade-in">
             <h2 class="p1"><span class="s1">DESIGN + ARCHITECTURE</span></h2>
             <p class="p1"><span class="s1">Themes of British Heritage and Triumph were explored in conceptual territories, as well as the chosen route of Family Values. This lead to the brand essence - the answer to ‘Why Bailey?’ - of Stronger Together, the promise of ongoing customer partnerships that was unique to this family business. With brand values and personality defined, in easy-to-remember-and-act-on sets of three, it was simple for the client to roll it out internally so everyone understood the new company vision.<span class="Apple-converted-space"> </span></span>
@@ -193,29 +198,15 @@
             </p>
             <p class="p2"><span class="s1">The Tone of Voice reinforced the family feel, with a no-jargon approachability and the customer’s needs put first. Differentiation was delivered by putting a warm human tone into a traditionally technical sector. The job of bringing the variously named systems and products into consistent brand language was then explored to reinforce our essence of Stronger Together.</span></p>
         </section>
-        <section class="container site-section fade-in">
 
-            <picture>
-                <source srcset="../assets/img/projects/villa/04.jpg" media="(min-width: 1200px)">
-                <source srcset="../assets/img/projects/villa/04.jpg" media="(min-width: 640px)">
-                <img src="../assets/img/projects/villa/04.jpg" class="w-full " alt="Logo green">
-            </picture>
-        </section>
-
-        <section class="container site-section fade-in">
-
-            <picture>
-                <source srcset="../assets/img/projects/villa/05.jpg" media="(min-width: 1200px)">
-                <source srcset="../assets/img/projects/villa/05.jpg" media="(min-width: 640px)">
-                <img src="../assets/img/projects/villa/05.jpg" class="w-full " alt="Logo green">
-            </picture>
-        </section>
 
         <section class="container-3xl--right site-section--narrow cms-copy fade-in">
             <h2 class="p1"><span class="s1">WEB DESIGN + BUILD</span></h2>
             <p class="p1"><span class="s1">Although not an e-commerce site, the complicated combinations of products and variants needed to be made accessible and attractive to Bailey’s customers. We provided numerous solutions to solve the challenges of how such a diverse and overlapping range could be organised and displayed. This raised questions that ultimately helped Bailey streamline their business. With the user’s needs first and foremost, we designed a really clear way to navigate a complicated world of roof tiles and gutters, that was nonetheless visually appealing. It all came together strongly and beautifully and the client had not one amend to make to the original design. The visual brand language, of open white spaces making it a clean and clear experience, and the graphic blocks applied to transitions and image crops, resulted in a site that was both functional and full of authentic personality.</span></p>
         </section>
-
+        <section class="container-3xl--right site-section--narrow cms-copy fade-in">
+            <h2><a href="#" target="_blank" rel="noopener noreferrer">view website</a></h2>
+        </section>
         <section class="container site-section fade-in">
             <full-width-slider inline-template>
                 <div class="js-full-width-slider swiper-container w-full relative">
@@ -224,9 +215,9 @@
                             <div class="bflex items-center justify-center" style="background: #2A2A2A; padding: 10% 10%;">
 
                                 <picture>
-                                    <source srcset="../assets/img/projects/villa/bp1.jpg" media="(min-width: 1200px)">
-                                    <source srcset="../assets/img/projects/villa/bp1.jpg" media="(min-width: 640px)">
-                                    <img src="../assets/img/projects/villa/bp1.jpg" class="w-full " alt="Logo green">
+                                    <source srcset="../assets/img/projects/sandstrasse/bp01.jpg" media="(min-width: 1200px)">
+                                    <source srcset="../assets/img/projects/sandstrasse/bp01.jpg" media="(min-width: 640px)">
+                                    <img src="../assets/img/projects/sandstrasse/bp01.jpg" class="w-full " alt="Logo green">
                                 </picture>
 
                             </div>
@@ -234,27 +225,27 @@
                         <div class="swiper-slide">
                             <div class="bflex items-center justify-center" style="background: #2A2A2A; padding: 21% 17%;">
                                 <picture>
-                                    <source srcset="../assets/img/projects/villa/bp2.jpg" media="(min-width: 1200px)">
-                                    <source srcset="../assets/img/projects/villa/bp2.jpg" media="(min-width: 640px)">
-                                    <img src="../assets/img/projects/villa/bp2.jpg" class="w-full " alt="Logo green">
+                                    <source srcset="../assets/img/projects/sandstrasse/bp02.jpg" media="(min-width: 1200px)">
+                                    <source srcset="../assets/img/projects/sandstrasse/bp02.jpg" media="(min-width: 640px)">
+                                    <img src="../assets/img/projects/sandstrasse/bp02.jpg" class="w-full " alt="Logo green">
                                 </picture>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="bflex items-center justify-center" style="background: #2A2A2A; padding: 21% 17%;">
                                 <picture>
-                                    <source srcset="../assets/img/projects/villa/bp3.jpg" media="(min-width: 1200px)">
-                                    <source srcset="../assets/img/projects/villa/bp3.jpg" media="(min-width: 640px)">
-                                    <img src="../assets/img/projects/villa/bp3.jpg" class="w-full " alt="Logo green">
+                                    <source srcset="../assets/img/projects/sandstrasse/bp03.jpg" media="(min-width: 1200px)">
+                                    <source srcset="../assets/img/projects/sandstrasse/bp03.jpg" media="(min-width: 640px)">
+                                    <img src="../assets/img/projects/sandstrasse/bp03.jpg" class="w-full " alt="Logo green">
                                 </picture>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="bflex items-center justify-center" style="background: #2A2A2A; padding: 21% 17%;">
                                 <picture>
-                                    <source srcset="../assets/img/projects/villa/bp4.jpg" media="(min-width: 1200px)">
-                                    <source srcset="../assets/img/projects/villa/bp4.jpg" media="(min-width: 640px)">
-                                    <img src="../assets/img/projects/villa/bp4.jpg" class="w-full " alt="Logo green">
+                                    <source srcset="../assets/img/projects/sandstrasse/bp04.jpg" media="(min-width: 1200px)">
+                                    <source srcset="../assets/img/projects/sandstrasse/bp04.jpg" media="(min-width: 640px)">
+                                    <img src="../assets/img/projects/sandstrasse/bp04.jpg" class="w-full " alt="Logo green">
                                 </picture>
                             </div>
                         </div>
@@ -275,6 +266,7 @@
                 </div>
             </full-width-slider>
         </section>
+
 
         <div class="site-section">
             <h2 class="type-3xl">Our other offerings...</h2>
