--- a/projects/sandstrasse.html
+++ b/projects/sandstrasse.html
@@ -267,65 +267,51 @@
             </full-width-slider>
         </section>
 
+
         <div class="site-section">
             <h2 class="type-3xl">Our other offerings...</h2>
             <ul class="border-b border-grey-450 mt-12 md:mt-24">
                 <li class="border-t border-grey-450 py-5 md:py-8">
-                    <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/somebody-pres-r2-v10-01.jpg' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/somebody-pres-r2-v10-01.jpg 2x'>" inline-template>
-                        <a class="type-base flex justify-between" href="somebody.html">
-                            <span class="text-black">Somebody</span>
+                    <tooltip content="<img class='w-40 h-45' src='../assets/img/projects/villa/01.jpg' srcset='../assets/img/projects/villa/01.jpg 2x'>" inline-template>
+                        <a class="type-base flex justify-between" href="">
+                            <span class="text-black">Villa Hauptstrausse</span>
+                            <span class="flex-shrink-0 ml-8">This Project</span>
+                        </a>
+                    </tooltip>
+                </li>
+                <li class="border-t border-grey-450 py-5 md:py-8">
+                    <tooltip content="<img class='w-40 h-45' src='../assets/img/projects/sandstrasse/indoors01.jpg' srcset='../assets/img/projects/sandstrasse/indoors01.jpg 2x'>" inline-template>
+                        <a class="type-base flex justify-between" href="sandstrasse.html">
+                            <span class="text-black">Sandstrasse</span>
                             <span class="flex-shrink-0 ml-8">View Project</span>
                         </a>
                     </tooltip>
                 </li>
                 <li class="border-t border-grey-450 py-5 md:py-8">
-                    <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/posters-close.jpg' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/posters-close.jpg 2x'>" inline-template>
-                        <a class="type-base flex justify-between" href="a2b.html">
-                            <span class="text-black">A2B</span>
+                    <tooltip content="<img class='w-40 h-45' src='../assets/img/projects/rebstockhalde/01.jpg' srcset='../assets/img/projects/rebstockhalde/01.jpg 2x'>" inline-template>
+                        <a class="type-base flex justify-between" href="rebstockhalde.html">
+                            <span class="text-black">Rebstockhalde</span>
                             <span class="flex-shrink-0 ml-8">View Project</span>
                         </a>
                     </tooltip>
                 </li>
                 <li class="border-t border-grey-450 py-5 md:py-8">
-                    <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/tags.jpg' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/tags.jpg 2x'>" inline-template>
-                        <a class="type-base flex justify-between" href="meet-bernard.html">
-                            <span class="text-black">Meet Bernard</span>
+                    <tooltip content="<img class='w-40 h-45' src='../assets/img/projects/baselgasse/01.jpg' srcset='../assets/img/projects/baselgasse/01.jpg 2x'>" inline-template>
+                        <a class="type-base flex justify-between" href="baselgasse.html">
+                            <span class="text-black">Baselgasse</span>
                             <span class="flex-shrink-0 ml-8">View Project</span>
                         </a>
                     </tooltip>
                 </li>
                 <li class="border-t border-grey-450 py-5 md:py-8">
-                    <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/spirit.jpg' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/spirit.jpg 2x'>" inline-template>
-                        <a class="type-base flex justify-between" href="tipsy-cow.html">
-                            <span class="text-black">Tipsy Cow</span>
+                    <tooltip content="<img class='w-40 h-45' src='../assets/img/projects/haupstrasse/01.jpg' srcset='../assets/img/projects/hauptstrasse/01.jpg 2x'>" inline-template>
+                        <a class="type-base flex justify-between" href="hauptstrausse2.html">
+                            <span class="text-black">Hauptstrausse</span>
                             <span class="flex-shrink-0 ml-8">View Project</span>
                         </a>
                     </tooltip>
                 </li>
-                <li class="border-t border-grey-450 py-5 md:py-8">
-                    <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/bigposter.jpg' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/bigposter.jpg 2x'>" inline-template>
-                        <a class="type-base flex justify-between" href="nosh.html">
-                            <span class="text-black">NOSH</span>
-                            <span class="flex-shrink-0 ml-8">View Project</span>
-                        </a>
-                    </tooltip>
-                </li>
-                <li class="border-t border-grey-450 py-5 md:py-8">
-                    <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/walking.jpg' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/walking.jpg 2x'>" inline-template>
-                        <a class="type-base flex justify-between" href="winchester-college.html">
-                            <span class="text-black">Winchester College</span>
-                            <span class="flex-shrink-0 ml-8">View Project</span>
-                        </a>
-                    </tooltip>
-                </li>
-                <li class="border-t border-grey-450 py-5 md:py-8">
-                    <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/thegrange-casestudy-v10-thegrange-1-8.png' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/thegrange-casestudy-v10-thegrange-1-8.png 2x'>" inline-template>
-                        <a class="type-base flex justify-between" href="the-grange.html">
-                            <span class="text-black">The Grange</span>
-                            <span class="flex-shrink-0 ml-8">View Project</span>
-                        </a>
-                    </tooltip>
-                </li>
+
             </ul>
         </div>
 
@@ -339,19 +325,19 @@
             <div class="flex flex-col xl:flex-row xl:flex-wrap md:mb-16 xl:my-24 xl:leading-tight">
                 <ul class="flex flex-wrap flex-col lg:block my-12 md:my-16 xl:my-0 xl:w-1/2">
                     <li class="mr-5 xl:mr-0">
-                        <a href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener" class="relative instagram-link">Instagram</a>
+                        <a href="https://www.instagram.com/#/" target="_blank" rel="noreferrer noopener" class="relative instagram-link">Instagram</a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener" class="relative linkedin-link">Linkedin</a>
+                        <a href="https://www.facebook.com/#/" target="_blank" rel="noreferrer noopener" class="relative linkedin-link">Facebook</a>
                     </li>
                 </ul>
                 <address class="hidden lg:block not-italic">
-                    <a href="https://www.google.com/maps/dir//Euphorie AG, Haupstrasse 19, 5734 Reinach AG/@51.068092,-1.318540, 12z/" target="_blank">
-                      Euphorie AG<br>
-                      Haupstrasse 19<br>
-                      5734 Reinach AG
-                    </a>
-                  </address>
+      <a href="https://www.google.com/maps/dir//Euphorie AG, Haupstrasse 19, 5734 Reinach AG/@51.068092,-1.318540, 12z/" target="_blank">
+        Euphorie AG<br>
+        Haupstrasse 19<br>
+        5734 Reinach AG
+      </a>
+    </address>
             </div>
             <div class="flex flex-col xl:flex-row xl:flex-wrap xl:flex-row-reverse xl:justify-end xl:min-h-28">
                 <newsletter></newsletter>
@@ -365,5 +351,6 @@
     </div>
     <script src="../assets/js/app9004.js"></script>
 </body>
+
 
 </html>
